[workspace]
resolver = "2"
members = [
    "crates/ussl-core",
    "crates/ussl-protocol",
    "crates/ussl-storage",
    "crates/ussl-transport",
    "crates/usld",
    "crates/ussl-cli",
]

[package]
name = "ussl-workspace"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { workspace = true }
ussl-core = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "benchmark"
path = "examples/benchmark.rs"

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Joett77/ussl"
authors = ["USSL Contributors"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# CRDT
yrs = "0.18"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# WebSocket
tokio-tungstenite = "0.21"
futures-util = "0.3"

# TLS
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2.1"

# Storage
rusqlite = { version = "0.30", features = ["bundled"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }

# Utils
bytes = "1.5"
uuid = { version = "1.6", features = ["v4"] }
dashmap = "5.5"
parking_lot = "0.12"

# Testing
criterion = "0.5"

# Internal crates
ussl-core = { path = "crates/ussl-core" }
ussl-protocol = { path = "crates/ussl-protocol" }
ussl-storage = { path = "crates/ussl-storage" }
ussl-transport = { path = "crates/ussl-transport" }
