[package]
name = "usld"
description = "USSL Daemon - Universal State Synchronization Layer server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "usld"
path = "src/main.rs"

[dependencies]
ussl-core.workspace = true
ussl-protocol.workspace = true
ussl-storage = { workspace = true, features = ["sqlite"] }
ussl-transport = { workspace = true, features = ["tls", "metrics"] }

tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true

# CLI
clap = { version = "4.4", features = ["derive", "env"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3.10"

[package.metadata.deb]
maintainer = "USSL Contributors <ussl@users.noreply.github.com>"
copyright = "2024, USSL Contributors"
license-file = ["../../LICENSE", "0"]
extended-description = """\
USSL (Universal State Synchronization Layer) is an open-source \
infrastructure primitive for state synchronization across distributed systems. \
Features CRDT-based conflict resolution, real-time updates, and offline support."""
depends = "$auto"
section = "net"
priority = "optional"
assets = [
    ["target/release/usld", "usr/bin/", "755"],
    ["../../README.md", "usr/share/doc/usld/README", "644"],
    ["config/ussl.toml", "etc/ussl/ussl.toml", "644"],
]
conf-files = ["/etc/ussl/ussl.toml"]
systemd-units = { unit-name = "usld", enable = false }

[package.metadata.deb.variants.default]
assets = [
    ["target/release/usld", "usr/bin/", "755"],
    ["../../README.md", "usr/share/doc/usld/README", "644"],
    ["config/ussl.toml", "etc/ussl/ussl.toml", "644"],
    ["systemd/usld.service", "lib/systemd/system/usld.service", "644"],
]
