[package]
name = "ussl-cli"
description = "USSL CLI client - connect and interact with USSL servers"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ussl"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["full"] }
clap = { version = "4.4", features = ["derive", "env"] }
rustyline = "13.0"
colored = "2.1"
anyhow.workspace = true

[package.metadata.deb]
maintainer = "USSL Contributors <ussl@users.noreply.github.com>"
copyright = "2024, USSL Contributors"
license-file = ["../../LICENSE-MIT", "0"]
extended-description = """\
USSL CLI client for connecting to and interacting with USSL servers. \
Features interactive REPL, command history, and colored output."""
depends = "$auto"
section = "net"
priority = "optional"
assets = [
    ["target/release/ussl", "usr/bin/", "755"],
]
