[package]
name = "ussl-core"
description = "Core CRDT engine and document management for USSL"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
yrs.workspace = true
serde.workspace = true
serde_json.workspace = true
rmp-serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
bytes.workspace = true
uuid.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
