[package]
name = "ussl-protocol"
description = "USSP (Universal State Sync Protocol) parser and serialization"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ussl-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
bytes.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
