[package]
name = "ussl-transport"
description = "Transport layer for USSL (TCP, WebSocket)"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["tcp", "websocket"]
tcp = []
websocket = ["dep:tokio-tungstenite"]
tls = ["dep:rustls", "dep:tokio-rustls", "dep:rustls-pemfile"]

[dependencies]
ussl-core.workspace = true
ussl-protocol.workspace = true
ussl-storage.workspace = true
tokio = { workspace = true, features = ["net", "io-util", "sync", "rt"] }
tokio-tungstenite = { workspace = true, optional = true }
futures-util.workspace = true
tracing.workspace = true
thiserror.workspace = true
bytes.workspace = true
serde_json.workspace = true
parking_lot.workspace = true

# TLS (optional)
rustls = { workspace = true, optional = true }
tokio-rustls = { workspace = true, optional = true }
rustls-pemfile = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
